Fixed location filter position on mobile view

--- a/src/Responsive/pages/Offers.css
+++ b/src/Responsive/pages/Offers.css
@@ -53,7 +53,7 @@
         border-radius: 1rem 1rem 0rem 0rem;
         transition: width 0s;
         transition: height 0.5s;
-        top: 66.75rem;
+        top: 69.5rem;
         left: 0rem;
     }
 }
